Added user page and article management page

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -15,8 +15,14 @@ code {
         monospace;
 }
 
+.ms-profile {
+    margin-left: ($spacer * 28) !important;
+}
 .ms-6 {
     margin-left: ($spacer * 22) !important;
+}
+.mt-6 {
+    margin-top: ($spacer * 11) !important;
 }
 
 .myHr {
