Added login page n register page

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -18,6 +18,9 @@ code {
 .ms-profile {
     margin-left: ($spacer * 28) !important;
 }
+.ms-login {
+    margin-left: ($spacer * 22) !important;
+}
 .ms-6 {
     margin-left: ($spacer * 22) !important;
 }
