Added user registration n authorization

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -24,6 +24,9 @@ code {
 .ms-6 {
     margin-left: ($spacer * 22) !important;
 }
+.mt-register {
+    margin-top: ($spacer * 6) !important;
+}
 .mt-6 {
     margin-top: ($spacer * 11) !important;
 }
