--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -35,6 +35,16 @@ code {
     border: 1px solid black;
 }
 
+.hidden {
+    opacity: 0;
+    height: 0;
+    width: 0;
+    line-height: 0;
+    overflow: hidden;
+    padding: 0;
+    margin: 0;
+}
+
 @media screen and (max-width: 1900px) {
     .user-card {
         display: none;
