--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -15,6 +15,9 @@ code {
         monospace;
 }
 
+.ms-adding-article {
+    margin-left: ($spacer * 46) !important;
+}
 .ms-profile {
     margin-left: ($spacer * 28) !important;
 }
@@ -43,6 +46,12 @@ code {
     overflow: hidden;
     padding: 0;
     margin: 0;
+}
+
+.title {
+    font-weight: bold;
+    margin-bottom: 1em;
+    font-size: 1.2rem;
 }
 
 @media screen and (max-width: 1900px) {
