--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -34,6 +34,10 @@ code {
     margin-top: ($spacer * 11) !important;
 }
 
+.btn-like {
+    display: none;
+}
+
 .myHr {
     border: 1px solid black;
 }
