Added ability to reply to comments n refactoring

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -24,6 +24,15 @@ code {
 .ms-login {
     margin-left: ($spacer * 22) !important;
 }
+.ms-reply {
+    margin-left: ($spacer * 6) !important;
+}
+.ms-reply-user {
+    margin-left: ($spacer * 4) !important;
+}
+.me-reply {
+    margin-right: ($spacer * 6) !important;
+}
 .ms-6 {
     margin-left: ($spacer * 22) !important;
 }
